# rustlink

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/models/: app.rs  authentication.rs  error.rs  event.rs  mod.rs  player.rs  session.rs  track.rs
src/network/: websocket.rs
src/rest/: mod.rs  player.rs
