[package]
name = "rustlink"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1.39", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
# Networking
axum = { version = "0.7", features = ["multipart", "json", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["limit", "cors", "trace"] }
# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Datatypes
uuid = { version = "1.9", features = ["serde", "v4"] }
secrecy = { version = "0.10.0", features = ["serde"] }
mime = "0.3"
bytes = "1.7"
thiserror = "1.0"
dotenvy = "0.15"
color-eyre = "0.6" 
derive_builder = "0.20"
futures-util = "0.3"
futures = "0.3"
rand = "0.8"
base64 = "0.22"
